--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
@@ -19,6 +20,7 @@
     "lodash": "^4.17.21",
     "lodash.kebabcase": "^4.1.1",
     "nodemon": "^3.0.2",
+    "openai": "^4.24.7",
     "pg": "^8.11.3"
   }
 }
